[metadata]
name = python-odlclient
summary = OpenDaylight Client Library and Command
description-file =
    README.md
author = Yuuichi Fujioka
author-email = fujioka.yuuichi@gmail.com
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    odlclient

[entry_points]
console_scripts =
    odl = odlclient.main:main
